tcw3/designer/tests/bad/use_unknown.tcwdl
// `self::Hoge2` resolves to `self::Hoge`, which is non-existent
use self::Hoge as Hoge2;
//~^ ERROR Could not resolve `Hoge`

pub comp crate::Comp1 {
    prop field: Hoge2;
}
